--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <div id="page-wrapper">
       <header id="header">
-        <a id="logo1" href="index.html"><img src="logo3.png"></a>
+        <a id="logo1" href="index.html">
+          <img src="C:\Users\Lenovo\Desktop\DCE\Internship(summer)\LABS\webdev_lab4\images" alt="It is the demo name of site.">
+        </a>
         <h1>My Demo Site</h1>
       </header>
       <nav id="main-nav">
