--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
       <main id="content-wrapper">
         <div id="main-content">
-          <h2><b>This is our h2 Tag</b></h2>
+          <h2><strong>This is our h2 Tag</strong></h2>
           <img class="imageR" src="C:\Users\Lenovo\Desktop\DCE\Internship(summer)\LABS\webdev_lab4\images\main.png" alt="This is our second image.">
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
@@ -37,7 +37,12 @@
             <li>List 4</li>
           </ul>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
-          <ul id="bul2"><li>List 1</li><li>List 2</li><li>List 3</li><li>List 4</li>        </ul>
+          <ul id="bul2">
+            <li>List 1</li>
+            <li>List 2</li>
+            <li>List 3</li>
+            <li>List 4</li>        
+          </ul>
           <div id="center">
             <iframe width="400" height="300" src="https://www.youtube.com/embed/-jn9aaNn8_I?si=D1HhLAWQ5awY9BfU frameborder="0" allowfullscreen></iframe>
           </div>
