--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <main id="content-wrapper">
         <div id="main-content">
           <h2><strong>This is our h2 Tag</strong></h2>
-          <img class="imageR" src="C:\Users\Lenovo\Desktop\DCE\Internship(summer)\LABS\webdev_lab4\images\main.png" alt="This is our second image.">
+          <img class="imageR" src="C:\Users\Lenovo\Desktop\DCE\Internship(summer)\LABS\webdev_lab4\images\main.png" alt="It is describing the company name Main Squeez Juise Co..">
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
