--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="page-wrapper">
       <header id="header">
         <a id="logo1" href="index.html">
-          <img src="C:\Users\Lenovo\Desktop\DCE\Internship(summer)\LABS\webdev_lab4\images\logo3.png" alt="It is the demo name of site.">
+          <img src="images/logo3.png" alt="It is the demo name of site.">
         </a>
         <h1>My Demo Site</h1>
       </header>
