--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <div id="page-wrapper">
       <header id="header">
-        <a id="logo1" href="index.html">
-          <img src="images/logo3.png" alt="It is the demo name of site.">
-        </a>
+          <img src="webdev_lab4/images/logo3.png" alt="It is the demo name of site.">
         <h1>My Demo Site</h1>
       </header>
       <nav id="main-nav">
