--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="page-wrapper">
       <header id="header">
-          <img src="webdev_lab4/images/logo3.png" alt="It is the demo name of site.">
+          <img src="https://github.com/maitry007/webdev_lab4/blob/main/images/logo3.png" alt="It is the demo name of site.">
         <h1>My Demo Site</h1>
       </header>
       <nav id="main-nav">
@@ -23,7 +23,7 @@
       <main id="content-wrapper">
         <div id="main-content">
           <h2><strong>This is our h2 Tag</strong></h2>
-          <img class="imageR" src="C:\Users\Lenovo\Desktop\DCE\Internship(summer)\LABS\webdev_lab4\images\main.png" alt="It is describing the company name Main Squeez Juise Co..">
+          <img class="imageR" src="https://github.com/maitry007/webdev_lab4/blob/main/images/main.png" alt="It is describing the company name Main Squeez Juise Co..">
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
